--- a/finder.css
+++ b/finder.css
@@ -106,6 +106,30 @@
     margin-bottom: 1.5em;
 }
 
+
+
+
+input[type=checkbox].with-image {
+display:none;
+}
+ 
+input[type=checkbox].with-image + label
+{
+background: #999;
+height: 16px;
+width: 16px;
+display:inline-block;
+padding: 0 0 0 0px;
+}
+input[type=checkbox].with-image:checked + label
+{
+background: #0080FF;
+height: 16px;
+width: 16px;
+display:inline-block;
+padding: 0 0 0 0px;
+}
+
 input[type=radio].with-font,
 input[type=checkbox].with-font {
     border: 0;
