--- a/finder.css
+++ b/finder.css
@@ -153,7 +153,7 @@ input[type=checkbox].with-font ~ label:before {
     display: inline-block;
     content: "\e9009";
     letter-spacing: 10px;
-    font-size: 1.1em;
+    font-size: 2em;
     color: white;
     width: 1.4em;
 }
@@ -162,7 +162,7 @@ input[type=radio].with-font:checked ~ label:before,
 input[type=checkbox].with-font:checked ~ label:before  {
     content: "\e9010";
     font-size: 2.0em;
-    color: darkgreen;
+    color: rgba(250, 255, 171, 0.91);
     letter-spacing: 5px;
 }
 input[type=checkbox].with-font ~ label:before {        
